--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7"
-  }
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  },
+  "type": "module"
 }
